WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227747
XPC services should release their os transaction when given a SIGTERM signal
https://bugs.webkit.org/show_bug.cgi?id=227747
Summary
XPC services should release their os transaction when given a SIGTERM signal
Alex Christensen
Reported
2021-07-07 09:17:31 PDT
XPC services should release their os transaction when given a SIGTERM signal
Attachments
Patch
(2.99 KB, patch)
2021-07-07 09:21 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.87 KB, patch)
2021-07-07 09:51 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-07-07 09:21:38 PDT
Created
attachment 433035
[details]
Patch
Alex Christensen
Comment 2
2021-07-07 09:21:41 PDT
<
rdar://problem/72430454
>
Geoffrey Garen
Comment 3
2021-07-07 09:41:54 PDT
Comment on
attachment 433035
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=433035&action=review
r=me
> Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.h:105 > + signal(SIGTERM, releaseOSTransaction);
FWIW, I like using no-capture lambdas in cases like this.
Alex Christensen
Comment 4
2021-07-07 09:51:27 PDT
Created
attachment 433038
[details]
Patch
EWS
Comment 5
2021-07-07 10:32:26 PDT
Committed
r279647
(
239460@main
): <
https://commits.webkit.org/239460@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433038
[details]
.
Alex Christensen
Comment 6
2021-07-13 13:56:55 PDT
Reverted in
r279890
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug