XPC services should release their os transaction when given a SIGTERM signal https://bugs.webkit.org/show_bug.cgi?id=227747 <rdar://72430454>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-07-07
Reviewed by Geoff Garen.

Apparently when you shut down your computer, processes are given a SIGTERM signal and expected to release their os_transaction_t
to indicate that they can now be terminated "cleanly".

* Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.h:
(WebKit::XPCServiceInitializer):

Canonical link: https://commits.webkit.org/239460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279647 268f45cc-cd09-0410-ab3c-d52691b4dbfc